manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-application
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: ping-pong-application
  template:
    metadata:
      labels:
        app: ping-pong-application
    spec:
      containers:
        - name: ping-pong-application
          image: nanyangcn/ping-pong-application
