manifests/db-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: main-application-namespace
  name: ping-pong-db-svc
  labels:
    app: ping-pong-db
spec:
  ports:
  - port: 5432
  clusterIP: None
  selector:
    app: ping-pong-db

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: main-application-namespace
  name: ping-pong-db-ss
spec:
  serviceName: ping-pong-db-svc
  replicas: 1 
  selector:
    matchLabels:
      app: ping-pong-db
  template:
    metadata:
      labels:
        app: ping-pong-db
    spec:
      containers:
      - name: ping-pong-db
        image: postgres
        ports:
        - name: db-port
          containerPort: 5432
        volumeMounts:
        - name: database
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: database
    spec: 
      accessModes: ["ReadWriteOnce"]
      storageClassName: local-path
      resources:
        requests:
          storage: 1Gi
