manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-application-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong-application 
  ports:
    - protocol: TCP
      port: 2347 
      targetPort: 3001
