manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: main-application-namespace
  name: main-application-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: main-application-svc
          servicePort: 2346
      - path: /pingpong
        backend:
          serviceName: ping-pong-application-svc
          servicePort: 80
